--- a/E-EstateV2/src/app/add-field/add-field.component.html
+++ b/E-EstateV2/src/app/add-field/add-field.component.html
@@ -65,7 +65,7 @@
                 </div>
 
                 <div style="columns: 2" *ngIf="field.isMature == true">
-                    <label>Current tree stand <span style="color: red;">*</span> :</label>
+                    <label>Current Tree Stand per Ha <span style="color: red;">*</span> :</label>
                     <input name="currentTree" type="number" [(ngModel)]="field.currentTreeStand" />
 
                     <label>Date Open Tapping <span style="color: red;">*</span> :</label>
