--- a/E-EstateV2/src/app/home/home-admin-lgm/home-admin-lgm.component.html
+++ b/E-EstateV2/src/app/home/home-admin-lgm/home-admin-lgm.component.html
@@ -207,7 +207,7 @@
 <br/>
 </div>
 
-<div class="box-container-outer" style="width: 47%;" class="print">
+<div class="box-container-outer print" style="width: 47%;" >
   <span style="font-size: 14px;font-weight: bold;">Rubber Productivity (Kg/Ha/Yr) for {{yearNow}}</span>
   <div class="box">
     <!-- <div class="column box-container color4">
