--- a/E-EstateV2/src/app/generate-form1/generate-form1.component.html
+++ b/E-EstateV2/src/app/generate-form1/generate-form1.component.html
@@ -120,7 +120,7 @@
             </tr>
             <tr>
                 <td nowrap="nowrap" colspan="8" style="text-align: left;">Kebenaran bertulis ini dijana dari Sistem
-                    e-Estate pada {{dateNow | date:'dd-MM-yyyy HH:mm:ss'}}</td>
+                    RRIMestet pada {{dateNow | date:'dd-MM-yyyy HH:mm:ss'}}</td>
             </tr>
             <tr>
 
