--- a/E-EstateV2/src/app/change-password/change-password.component.html
+++ b/E-EstateV2/src/app/change-password/change-password.component.html
@@ -1,31 +1,32 @@
-<h1 style="padding-top: 10px;"> &nbsp; &nbsp; Change Password</h1>
-<hr />
+<div class="box-container">
+  <h1>Change Password</h1>
+  <hr />
 
-<div style="padding: 15px;">
-  <form>
-    <label>Old Password :</label><br />
-    <div class="password-toggle">
-      <input type="{{ showPassword ? 'text' : 'password' }}" [(ngModel)]="register.oldPassword" name="oldPassword"
-        (change)="checkOldPassword()" />
-      <span (click)="togglePasswordVisibility()">
-        <i class="fa" [class.fa-eye]="showPassword" [class.fa-eye-slash]="!showPassword"></i>
-      </span>
-    </div>
+  <div>
+    <form>
+      <label>Old Password :</label><br />
+      <div class="password-toggle">
+        <input type="{{ showPassword ? 'text' : 'password' }}" [(ngModel)]="register.oldPassword" name="oldPassword"
+          (change)="checkOldPassword()" />
+        <span (click)="togglePasswordVisibility()">
+          <i class="fa" [class.fa-eye]="showPassword" [class.fa-eye-slash]="!showPassword"></i>
+        </span>
+      </div>
 
-    <label>New Password :</label><br />
-    <div class="password-toggle">
-      <input type="{{ showPassword ? 'text' : 'password' }}" [(ngModel)]="register.newPassword" name="newPassword" />
-      <span (click)="togglePasswordVisibility()">
-        <i class="fa" [class.fa-eye]="showPassword" [class.fa-eye-slash]="!showPassword"></i>
-      </span>
-    </div>
-  </form>
-  <button style="float: right" class="btn-add" (click)="submitNewPassword()">
-    Submit &nbsp; <i class="fa fa-plus"></i>
-  </button>
-  <button style="float: left" class="btn-back" (click)="back()">
-    <i class="fa fa-arrow-left"></i> &nbsp; Back
-  </button>
-  <br />
-  <br />
+      <label>New Password :</label><br />
+      <div class="password-toggle">
+        <input type="{{ showPassword ? 'text' : 'password' }}" [(ngModel)]="register.newPassword" name="newPassword" />
+        <span (click)="togglePasswordVisibility()">
+          <i class="fa" [class.fa-eye]="showPassword" [class.fa-eye-slash]="!showPassword"></i>
+        </span>
+      </div>
+    </form>
+    <button style="float: right" class="btn-add" (click)="submitNewPassword()">
+      Submit &nbsp; <i class="fa fa-plus"></i>
+    </button>
+    <button style="float: left" class="btn-back" (click)="back()">
+      <i class="fa fa-arrow-left"></i> &nbsp; Back
+    </button>
+    <br />
+  </div>
 </div>
