--- a/E-EstateV2/src/app/cost-info/direct-cost/mature-cost/mature-cost.component.css
+++ b/E-EstateV2/src/app/cost-info/direct-cost/mature-cost/mature-cost.component.css
@@ -67,4 +67,11 @@ button:disabled {
   cursor: not-allowed;
 }
 
+@media only screen and (max-width: 768px) {
+  .center-div{
+    width: max-content;
+    padding-bottom: 10px;
+  }
+}
+
 
