--- a/E-EstateV2/src/app/estate-detail/estate-detail.component.html
+++ b/E-EstateV2/src/app/estate-detail/estate-detail.component.html
@@ -14,7 +14,7 @@
     </button>
   </div>
 
-  <div style="overflow-x: auto; ">
+  <div>
     <table class="detailAdmin">
       <tr>
         <td>Estate Name</td>
