--- a/E-EstateV2/src/app/forgot-password/forgot-password.component.css
+++ b/E-EstateV2/src/app/forgot-password/forgot-password.component.css
@@ -56,3 +56,10 @@ h1 {
   font-size: 25px !important;
 }
 
+
+@media only screen and (max-width: 768px) {
+  .container{
+    width:unset;
+  }
+}
+
