--- a/E-EstateV2/src/app/home/home-admin-lgm/home-admin-lgm.component.html
+++ b/E-EstateV2/src/app/home/home-admin-lgm/home-admin-lgm.component.html
@@ -7,7 +7,7 @@
 </div>
 <br/><br/>
 
-<div style="columns:2">
+<div class="box1">
     <div class="box">
       <div class="column box-container color1">
         <div class="span-word">
@@ -62,7 +62,7 @@
 
 <div style="columns:2" class="print">
   <div class="box-container-outer">
-    <span style="font-size: 14px;font-weight: bold;">Tapper Worker for {{yearNow}}</span>
+    <span class="title2">Tapper Worker for {{yearNow}}</span>
     <div class="box">
       <div class="column box-container color4">
         <div class="span-word">
@@ -116,7 +116,7 @@
   </div> -->
 
   <div class="box-container-outer">
-    <span style="font-size: 14px;font-weight: bold;">Field Worker for {{yearNow}}</span>
+    <span class="title2">Field Worker for {{yearNow}}</span>
     <div class="box">
       <div class="column box-container color3">
         <div class="span-word">
@@ -147,7 +147,7 @@
 
 <div style="columns:2" class="print">
   <div class="box-container-outer">
-    <span style="font-size: 14px;font-weight: bold;">Rubber Production (100% DRC) (Kg/Yr) for {{yearNow}}</span>
+    <span class="title2">Rubber Production (100% DRC) (Kg/Yr) for {{yearNow}}</span>
     <div class="box">
       <div class="column box-container color4">
         <div class="span-word">
@@ -190,7 +190,7 @@
   </div>
 
   <div class="box-container-outer">
-    <span style="font-size: 14px;font-weight: bold;">Cost of Production (RM/Kg/Yr) for {{yearNow}}</span>
+    <span class="title2">Cost of Production (RM/Kg/Yr) for {{yearNow}}</span>
     <div class="box">
       <div class="column box-container color3">
         <div class="span-word">
@@ -208,7 +208,7 @@
 </div>
 
 <div class="box-container-outer print" style="width: 47%;" >
-  <span style="font-size: 14px;font-weight: bold;">Rubber Productivity (Kg/Ha/Yr) for {{yearNow}}</span>
+  <span class="title2">Rubber Productivity (Kg/Ha/Yr) for {{yearNow}}</span>
   <div class="box">
     <!-- <div class="column box-container color4">
       <div class="span-word">
