--- a/E-EstateV2/src/app/home/home-estate-clerk/home-estate-clerk.component.html
+++ b/E-EstateV2/src/app/home/home-estate-clerk/home-estate-clerk.component.html
@@ -9,7 +9,7 @@
 
 <div style="columns:2">
   <div class="box-container-outer">
-    <span style="font-size: 14px;font-weight: bold;">Current Rubber Area (Ha)</span>
+    <span class="title2">Current Rubber Area (Ha)</span>
     <div class="box">
       <!-- <div class="column box-container color3">
         <div class="span-word">
@@ -50,7 +50,7 @@
   <br />
 
   <div class="box-container-outer">
-    <span style="font-size: 14px;font-weight: bold;">Current Rubber Dry Production (Kg)</span>
+    <span class="title2">Current Rubber Dry Production (Kg)</span>
     <div class="box">
       <div class="column box-container color1">
         <div class="span-word">
@@ -95,7 +95,7 @@
 
 <div style="columns:2">
   <div class="box-container-outer">
-    <span style="font-size: 14px;font-weight: bold;">Tapper Worker</span>
+    <span class="title2">Tapper Worker</span>
     <div class="box">
       <div class="column box-container color1">
         <div class="span-word">
@@ -123,7 +123,7 @@
   </div>
 
   <div class="box-container-outer">
-    <span style="font-size: 14px;font-weight: bold;">Field Worker</span>
+    <span class="title2">Field Worker</span>
     <div class="box">
       
 
@@ -157,7 +157,7 @@
 <br />
 
 <div class="box-container-outer">
-  <span style="font-size: 14px;font-weight: bold;">Current Rubber Productivity (Kg/Ha)</span>
+  <span class="title2">Current Rubber Productivity (Kg/Ha)</span>
   <div class="box">
     <!-- <div class="column box-container color4">
       <div class="span-word">
