--- a/E-EstateV2/src/app/monthly-form/field-production-monthly/field-production-monthly.component.css
+++ b/E-EstateV2/src/app/monthly-form/field-production-monthly/field-production-monthly.component.css
@@ -112,3 +112,20 @@ th {
 .box-container {
   box-shadow: none;
 }
+
+@media only screen and (max-width: 768px) {
+  .box{
+    padding: 0;
+  }
+  .column{
+    height: 74px;
+    span{
+      font-size: 12px;
+    }
+  }
+
+  b{
+    font-size: 12px;
+  }
+
+}
