--- a/E-EstateV2/src/app/monthly-form/worker-shortage/worker-shortage.component.css
+++ b/E-EstateV2/src/app/monthly-form/worker-shortage/worker-shortage.component.css
@@ -52,3 +52,10 @@ td {
 /* .btn-update{
     padding: 6px 13px;
   } */
+
+
+  @media only screen and (max-width: 768px) {
+    .box-container{
+      width: 70%;
+    }
+  }
