--- a/E-EstateV2/src/app/rubber-sale-detail/rubber-sale-detail.component.css
+++ b/E-EstateV2/src/app/rubber-sale-detail/rubber-sale-detail.component.css
@@ -20,3 +20,9 @@ mat-select {
 mat-option {
   font-size: 12px;
 }
+
+@media only screen and (max-width: 768px) {
+  .box-container{
+    margin-top: -34px;
+  }
+}
