--- a/E-EstateV2/src/app/rubber-sale-detail/rubber-sale-detail.component.html
+++ b/E-EstateV2/src/app/rubber-sale-detail/rubber-sale-detail.component.html
@@ -1,5 +1,5 @@
 <br />
-<div style="padding: 20px; margin-top: -192px;">
+<div class="box-container">
   <h1>Rubber Sale Information</h1>
   <hr />
   <div style="columns: 2" class="column">
