--- a/E-EstateV2/src/app/verify-email/verify-email.component.css
+++ b/E-EstateV2/src/app/verify-email/verify-email.component.css
@@ -9,3 +9,10 @@
 .cont {
   text-align: -webkit-center;
 }
+
+
+@media only screen and (max-width: 768px) {
+  .container{
+    width: none;
+  }
+}
