--- a/E-EstateV2/src/app/_layout/home-layout/home-layout.component.css
+++ b/E-EstateV2/src/app/_layout/home-layout/home-layout.component.css
@@ -7,10 +7,12 @@ mat-sidenav {
   border-radius: 10px;
   padding: 5px;
   text-align: center;
+  min-height: 92vh;
 }
 
 .mat-drawer-container {
   display: inherit !important;
+  z-index: auto !important;
 }
 
 .flexExpand {
@@ -68,4 +70,17 @@ img{
   width: 240px;
   margin-left: -30px;
 }
+
+
+@media only screen and (max-width: 768px) {
+  img {
+    width: 186px;
+    margin-top: 5px;
+  }
+  span{
+    margin-top: 1px;
+  }
+}
+
+
 
