--- a/E-EstateV2/src/app/add-field/add-field.component.css
+++ b/E-EstateV2/src/app/add-field/add-field.component.css
@@ -65,3 +65,10 @@ input[type="file"]{
     color: white;
     font-size: 11px;
 }
+
+
+@media only screen and (max-width: 768px) {
+  .box{
+    justify-content: unset;
+  }
+}
