--- a/E-EstateV2/src/app/edit-estate-detail/edit-estate-detail.component.html
+++ b/E-EstateV2/src/app/edit-estate-detail/edit-estate-detail.component.html
@@ -110,7 +110,7 @@
   <br />
   <hr>
 
-  <div style="columns: 2" class="column">
+  <div class="column">
     <!-- <label>Land title (Grant No) :</label>
     <input type="text" name="ownershipNo" [(ngModel)]="estateDetail.grantNo" /> -->
     <label>Planting Material <span style="color: red;">*</span> :</label>
