--- a/E-EstateV2/src/app/field-production-detail/field-production-detail.component.html
+++ b/E-EstateV2/src/app/field-production-detail/field-production-detail.component.html
@@ -1,5 +1,6 @@
-<br />
+<div class="box-container">
 <h1 style="padding-left: 17px">{{ product.fieldName }}</h1>
+<hr>
 <!-- <span style="color: red;padding-left: 17px">*If there is no production, please insert 0</span> -->
 <div style="overflow-x: auto; padding: 10px">
   <table style="width: 100%">
@@ -37,6 +38,7 @@
   <button class="btn-back" (click)="back()">
     <i class="fa fa-arrow-left"></i> &nbsp; Back
   </button>
+</div>
 </div>
 
 <app-spinner></app-spinner>
