--- a/E-EstateV2/src/app/generate-form1/generate-form1.component.css
+++ b/E-EstateV2/src/app/generate-form1/generate-form1.component.css
@@ -62,6 +62,9 @@ div {
 @media print {
   .print {
     display: block;
+    page-break-inside: avoid;
+    page-break-after: auto;
+    page-break-before: auto;
   }
   .btn-print {
     display: none;
@@ -87,4 +90,24 @@ div {
   margin-bottom: 20px;
   overflow: auto;
   height: -webkit-fill-available;
+}
+
+.footer {
+  width: 100%;
+  td{
+    text-align: start;
+  }
+}
+
+
+@media only screen and (max-width: 768px) {
+  .footer {
+    margin: 0;
+    width: 100%;
+    td{
+      text-align: start;
+      font-size: 8px;
+      padding: 0;
+    }
+  }
 }
