--- a/E-EstateV2/src/app/generate-form1/generate-form1.component.html
+++ b/E-EstateV2/src/app/generate-form1/generate-form1.component.html
@@ -2,13 +2,13 @@
     <button class="btn-print" (click)="print()">Print <i class="fa fa-print"></i></button>
     <div style="text-align: center;" style="border: 1px solid black; padding: 15px;">
         <table class="table1" width="90%">
-            <tr *ngIf="rubberSale.letterOfConsentNo != ''"> 
-                <td  colspan="8" style="text-align:right">
+            <tr *ngIf="rubberSale.letterOfConsentNo != ''">
+                <td colspan="8" style="text-align:right">
                     <qrcode [qrdata]="qrcodedata" [width]="80"></qrcode>
                 </td>
             </tr>
 
-            <tr *ngIf="rubberSale.letterOfConsentNo == ''"> 
+            <tr *ngIf="rubberSale.letterOfConsentNo == ''">
                 <td colspan="8" style="text-align:right; height: 80px;">
                 </td>
             </tr>
@@ -30,7 +30,7 @@
                             <br /><br /><b>KEBENARAN BERTULIS UNTUK PENGANGKUTAN GETAH</b>
                         </td>
                     </tr>
-                    
+
                 </table>
             </div>
         </table>
@@ -53,7 +53,8 @@
                 <td style="width:3%"></td>
                 <td style="width:15%"><b>Tarikh</b></td>
                 <td style="width:1%">:</td>
-                <td style="width:26%"><span id="tarikh"><b>{{rubberSale.saleDateTime| date:'dd-MM-yyyy'}}</b></span></td>
+                <td style="width:26%"><span id="tarikh"><b>{{rubberSale.saleDateTime| date:'dd-MM-yyyy'}}</b></span>
+                </td>
             </tr>
 
         </table>
@@ -65,7 +66,8 @@
                     yang beralamat
                     di <b>{{estate.add1}} {{estate.add2}} {{estate.add3}}</b>
                     Pemegang Lesen No <b>{{estate.licenseNo}}</b> memperakui bahawa saya/kami*
-                    ialah pemunya sah getah untuk mengangkut/memberi kebenaran mengangkut seperti perkara yang diperihalkan di bawah kepada 
+                    ialah pemunya sah getah untuk mengangkut/memberi kebenaran mengangkut seperti perkara yang
+                    diperihalkan di bawah kepada
                     <b>{{buyer.premiseName}}</b>
                     yang beralamat
                     di <b>{{buyer.premiseAdd1}} {{buyer.premiseAdd2}} {{buyer.premiseAdd3}} </b>
@@ -91,7 +93,8 @@
                     <span id="perihal">{{rubberSale.wetWeight}}</span>
                 </td>
                 <td>
-                    <span id="perihal">{{rubberSale.transportPlateNo}} / {{rubberSale.driverName}} ({{rubberSale.driverIc}})</span>
+                    <span id="perihal">{{rubberSale.transportPlateNo}} / {{rubberSale.driverName}}
+                        ({{rubberSale.driverIc}})</span>
                 </td>
                 <td>
                     <span id="perihal">{{rubberSale.deliveryAgent}}</span>
@@ -114,17 +117,20 @@
                 <td>&nbsp;</td>
                 <td>&nbsp;</td>
             </tr>
+            <div class="footer">
+                <tr>
+                    <td colspan="7" style="font-style: italic;"><b>Ini adalah cetakan komputer dan tandatangan tidak
+                            diperlukan</b>
+                    </td>
+                </tr>
+                <tr>
+                    <td nowrap="nowrap" colspan="8" style="text-align: left;">Kebenaran bertulis ini dijana dari Sistem
+                        RRIMestet pada {{dateNow | date:'dd-MM-yyyy HH:mm:ss'}}</td>
+                </tr>
+            </div>
             <tr>
-                <td colspan="7" style="font-style: italic;"><b>Ini adalah cetakan komputer dan tandatangan tidak diperlukan</b>
-                </td>
             </tr>
-            <tr>
-                <td nowrap="nowrap" colspan="8" style="text-align: left;">Kebenaran bertulis ini dijana dari Sistem
-                    RRIMestet pada {{dateNow | date:'dd-MM-yyyy HH:mm:ss'}}</td>
-            </tr>
-            <tr>
 
-            </tr>
         </table>
 
     </div><br /><br />
