--- a/E-EstateV2/src/app/home/home-company-admin/home-company-admin.component.css
+++ b/E-EstateV2/src/app/home/home-company-admin/home-company-admin.component.css
@@ -63,6 +63,17 @@
   padding: 5px !important;
 }
 
-span{
-  font-size: 13px;
+.title2{
+  font-size: 14px;
+  font-weight: bold;
+}
+
+@media only screen and (max-width: 768px) {
+  .title2{
+    font-size: 12px;
+  }
+
+  .tittle{
+    font-size: 17px !important;
+  }
 }
