--- a/E-EstateV2/src/app/home/home-estate-clerk/home-estate-clerk.component.css
+++ b/E-EstateV2/src/app/home/home-estate-clerk/home-estate-clerk.component.css
@@ -82,3 +82,18 @@
   padding: 5px !important;
 }
 
+.title2{
+  font-size: 14px;
+  font-weight: bold;
+}
+
+@media only screen and (max-width: 768px) {
+  .title2{
+    font-size: 12px;
+  }
+
+  .tittle{
+    font-size: 17px !important;
+  }
+}
+
