--- a/E-EstateV2/src/app/register/register.component.css
+++ b/E-EstateV2/src/app/register/register.component.css
@@ -93,3 +93,10 @@ mat-select {
 mat-option {
   font-size: 12px;
 }
+
+
+@media only screen and (max-width: 768px) {
+  .container{
+    width: auto;
+  }
+}
